--- a/.github/workflows/check-compilation.yml
+++ b/.github/workflows/check-compilation.yml
@@ -21,12 +21,11 @@ jobs:
 
       - name: setup node
         uses: actions/setup-node@v4
-        with:
-          node-version: ${{env.NODE_VERSION}}
 
       - name: install dependencies
         run: npm install
 
       - name: start server and check for compliation errors
+        env:
+          POSTGRES_DB_URI: ${{ secrets.POSTGRES_DB_URI }}
         run: npm start
-
