--- a/.github/workflows/check-compilation.yml
+++ b/.github/workflows/check-compilation.yml
@@ -17,16 +17,16 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: setup node
         uses: actions/setup-node@v4
-        with:
-          node-version: ${{env.NODE_VERSION}}
 
       - name: install dependencies
         run: npm install
 
       - name: start server and check for compliation errors
+        env:
+          POSTGRES_DB_URI: ${{ secrets.POSTGRESQL_DB_URI }}
         run: npm start
-,
+        
