--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "sequelize": "^6.36.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.3"
   }
 }
