--- a/.github/workflows/check-compilation.yml
+++ b/.github/workflows/check-compilation.yml
@@ -28,9 +28,10 @@ jobs:
         run: npm install
 
       - name: start server and check for compliation errors
+        run: |
+          echo $POSTGRESQL_DB_URI
+          echo ${{secrets.POSTGRESQL_DB_URI}}
+          npm start
         env:
           POSTGRESQL_DB_URI: ${{ secrets.POSTGRESQL_DB_URI }}
           PORT: ${{ vars.PORT }}
-        run: |
-            echo $POSTGRESQL_DB_URI
-            npm start
