--- a/.github/workflows/check-compilation.yml
+++ b/.github/workflows/check-compilation.yml
@@ -2,10 +2,7 @@
 name: Server compilation check
 
 # Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  pull_request:
-    branches: ["main"]
+on: [pull_request]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -27,11 +24,9 @@ jobs:
       - name: install dependencies
         run: npm install
 
+      - name: print all environment vaiables
+        run: printenv
+
       - name: start server and check for compliation errors
         run: |
-          echo $POSTGRESQL_DB_URI
-          echo ${{secrets.POSTGRESQL_DB_URI}}
           npm start
-        env:
-          POSTGRESQL_DB_URI: ${{ secrets.POSTGRESQL_DB_URI }}
-          PORT: ${{ vars.PORT }}
