--- a/.github/workflows/check-compilation.yml
+++ b/.github/workflows/check-compilation.yml
@@ -2,7 +2,7 @@
 name: Server compilation check
 
 # Controls when the workflow will run
-on: [pull_request]
+on: [pull_request: ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -10,8 +10,6 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    environment: webapp
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -24,9 +22,11 @@ jobs:
       - name: install dependencies
         run: npm install
 
-      - name: print all environment vaiables
-        run: printenv
-
       - name: start server and check for compliation errors
         run: |
+          echo $POSTGRESQL_DB_URI
+          echo ${{secrets.POSTGRESQL_DB_URI}}
           npm start
+        env:
+          POSTGRESQL_DB_URI: ${{ secrets.POSTGRESQL_DB_URI }}
+          PORT: ${{ env.PORT }}
