--- a/.github/workflows/check-compilation.yml
+++ b/.github/workflows/check-compilation.yml
@@ -2,7 +2,7 @@
 name: Server compilation check
 
 # Controls when the workflow will run
-on: [pull_request: ]
+on: [pull_request]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
