--- a/.github/workflows/check-compilation.yml
+++ b/.github/workflows/check-compilation.yml
@@ -11,6 +11,8 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    environment: webapp
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: checkout code
