--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.3",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "sequelize": "^6.36.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
