--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "mocha --bail",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "pg": "^8.11.3",
     "express": "^4.18.2",
+    "pg": "^8.11.3",
     "sequelize": "^6.36.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "chai": "^5.0.3",
+    "mocha": "^10.3.0",
+    "nodemon": "^3.0.3",
+    "supertest": "^6.3.4"
   }
 }
