--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "bcrypt": "^5.1.1",
     "pg": "^8.11.3",
+    "express": "^4.18.2",
     "sequelize": "^6.36.0"
   },
   "devDependencies": {
