--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
+      - name: setup node
+        uses: actions/setup-node@v4  
+
       # Performs a clean installation of all dependencies in the `package.json` file
       # For more information, see https://docs.npmjs.com/cli/ci.html
       - name: Install dependencies
