--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -52,6 +52,8 @@ jobs:
           POSTGRESQL_USER: postgres
           # The password used to connect to the PostgreSQL service container
           POSTGRESQL_PASSWORD: postgres
+          # The name of the database to connect to
+          POSTGRESQL_DB: postgres
       
       - name: Run tests
         run: npm test
