--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -26,34 +26,26 @@ jobs:
           --health-retries 5
 
     steps:
-      # Downloads a copy of the code in your repository before running CI tests
       - name: Check out repository code
         uses: actions/checkout@v4
 
       - name: setup node
         uses: actions/setup-node@v4  
 
-      # Performs a clean installation of all dependencies in the `package.json` file
-      # For more information, see https://docs.npmjs.com/cli/ci.html
       - name: Install dependencies
         run: npm install
 
       - name: Connect to PostgreSQL
-        # Runs a script that creates a PostgreSQL table, populates
-        # the table with data, and then retrieves the data.
-        run: node server.js
-        # Environment variables used by the `client.js` script to create a new PostgreSQL table.
+        run: node server.js &
         env:
-          # The hostname used to communicate with the PostgreSQL service container
           POSTGRESQL_HOST: postgres
-          # The default PostgreSQL port
           POSTGRESQL_PORT: 5432
-          # The default PostgreSQL username
           POSTGRESQL_USER: postgres
-          # The password used to connect to the PostgreSQL service container
           POSTGRESQL_PASSWORD: postgres
-          # The name of the database to connect to
           POSTGRESQL_DB: postgres
+        
+      - name: Wait for server to start
+        run: sleep 10
       
       - name: Run tests
         run: npm test
