--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "sequelize": "^6.36.0"
   },
   "devDependencies": {
-    "chai": "^5.0.3",
+    "chai": "^4.4.1 < 5.0.0",
     "mocha": "^10.3.0",
     "nodemon": "^3.0.3",
     "supertest": "^6.3.4"
