--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -3,7 +3,7 @@ on: [pull_request]
 
 jobs:
   # Label of the container job
-  container-job:
+  run-tests:
     # Containers must run in Linux based operating systems
     runs-on: ubuntu-latest
     # Docker Hub image that `container-job` executes in
