--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -19,20 +19,23 @@ jobs:
           sudo apt-get update
           sudo apt-get install postgresql postgresql-contrib
           sudo service postgresql start
-          sudo -u postgres psql -c "CREATE DATABASE ${{env.POSTGRESQL_DB}};"
+          sudo -u postgres psql -c "CREATE DATABASE ${{vars.POSTGRESQL_DB}};"
           sudo -u postgres psql -c "CREATE USER ${{secrets.POSTGRESQL_USER}} WITH PASSWORD '${{secrets.POSTGRESQL_PASSWORD}}';"
-          sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE ${{env.POSTGRESQL_DB}} TO ${{secrets.POSTGRESQL_USER}};"
+          sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE ${{vars.POSTGRESQL_DB}} TO ${{secrets.POSTGRESQL_USER}};"
         
       
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
+          npm server.js
+          timeout 5s &
       
       - name: Run tests
         run: npm test
         env:
-          POSTGRESQL_HOST: ${{ env.POSTGRESQL_HOST }}
+          POSTGRESQL_HOST: ${{ vars.POSTGRESQL_HOST }}
           POSTGRESQL_USER: ${{ secrets.POSTGRESQL_USER }}
           POSTGRESQL_PASSWORD: ${{ secrets.POSTGRESQL_PASSWORD }}
-          POSTGRESQL_DB: ${{ env.POSTGRESQL_DB }}
-          PORT: ${{ env.PORT }}
+          POSTGRESQL_DB: ${{ vars.POSTGRESQL_DB }}
+          PORT: ${{ vars.PORT }}
