--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -34,6 +34,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name: Run server
+        run: node server.js &
       
       - name: Run tests
         run: npm test
