--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -34,10 +34,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build tar file
-        run: |
-          ls -la
-          ls -la ../
-          tar -czf webapp-artifact.tar.gz webapp
+        run: tar -czf webapp-artifact.tar.gz /tmp/webapp
 
       - name: Setup node
         uses: actions/setup-node@v4  
