Cd back and then create tar

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -35,8 +35,8 @@ jobs:
 
       - name: Build tar file
         run: |
-          ls -al ../
-          tar -czf /tmp/webapp-artifact.tar.gz ../webapp
+          cd ..
+          tar -czf /tmp/webapp-artifact.tar.gz webapp
 
       - name: Setup node
         uses: actions/setup-node@v4  
