--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -21,11 +21,11 @@ jobs:
 
       - name: Run packer fmt
         run: |
-         output=$(packer fmt packer/)
+         output=$(packer fmt packer)
          if [ -n "$output" ]; then
             echo "$output"
             exit 1
          fi 
 
       - name: Run packer validate
-        run: packer validate packer/
+        run: packer validate packer
