Added env variable for GCP creds

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,8 +1,10 @@
 name: Run integration tests
-on:
-  push:
-    branches:
+on: 
+  pull_request: 
+    types: [closed]
+    branches: 
       - main
+
 
 env:
   POSTGRESQL_HOST: ${{ vars.POSTGRESQL_HOST }}
@@ -10,10 +12,12 @@ env:
   POSTGRESQL_PASSWORD: ${{ secrets.POSTGRESQL_PASSWORD }}
   POSTGRESQL_DB: ${{ vars.POSTGRESQL_DB }}
   PORT: ${{ vars.PORT }}
+  GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
 
 jobs:
   # Label of the container job
   packer-job:
+    if: github.event.pull_request.merged == true
     
     runs-on: ubuntu-latest
 
