--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,9 +1,11 @@
 name: Run integration tests
-on: 
-  pull_request: 
-    types: [closed]
-    branches: 
-      - main
+# on: 
+#   pull_request: 
+#     types: [closed]
+#     branches: 
+#       - main
+
+on: [pull_request]
 env:
   POSTGRESQL_HOST: ${{ vars.POSTGRESQL_HOST }}
   POSTGRESQL_USER: ${{ secrets.POSTGRESQL_USER }}
@@ -15,19 +17,10 @@ env:
 jobs:
   # Label of the container job
   packer-job:
-    if: github.event.pull_request.merged == true
     
     runs-on: ubuntu-latest
 
     steps:
-
-      - id: 'auth'
-        uses: 'google-github-actions/auth@v2'
-        with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-
-      - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v2'
 
       - name: Check out repository code
         uses: actions/checkout@v4
@@ -57,6 +50,17 @@ jobs:
       
       - name: Run tests
         run: npm test
+
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+
+      - name: 'Run gcp login'
+        run: gcloud auth activate-service-account --key-file=${{ secrets.GCP_CREDENTIALS }}
 
       - name: Install packer
         uses: hashicorp/setup-packer@main
