--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "pg": "^8.11.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "pg": "^8.11.3",
     "sequelize": "^6.36.0"
   },
   "devDependencies": {
