--- a/packer/csye6225.service
+++ b/packer/csye6225.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=CSYE 6225 App
+Description=CSYE 6225 Webapp
 
 [Service]
 Type=simple
@@ -7,10 +7,6 @@ User=csye6225
 Group=csye6225
 WorkingDirectory=/opt/webapp
 ExecStart=/usr/bin/node /opt/webapp/server.js
-Environment=POSTGRESQL_USER=postgres
-Environment=POSTGRESQL_PASSWORD=bigblue@8=/3
-Environment=POSTGRESQL_DB=megacorp
-Environment=POSTGRESQL_HOST=localhost
 Environment=PORT=3000
 Restart=always
 RestartSec=3
