--- a/packer/csye6225.service
+++ b/packer/csye6225.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=CSYE 6225 Webapp
 ConditionPathExists=/opt/webapp/.env
+StartLimitInterval=200
+StartLimitBurst=5
 
 [Service]
 Type=simple
@@ -9,7 +11,7 @@ Group=csye6225
 WorkingDirectory=/opt/webapp
 ExecStart=/usr/bin/node /opt/webapp/server.js
 Restart=always
-RestartSec=3
+RestartSec=30
 StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier=csye6225
