--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "pg": "^8.11.3",
-    "sequelize": "^6.36.0"
+    "sequelize": "^6.36.0",
+    "winston": "^3.12.0"
   },
   "devDependencies": {
     "chai": "^4.4.1 < 5.0.0",
