--- a/packer/config.yaml
+++ b/packer/config.yaml
@@ -10,6 +10,7 @@ logging:
       type: parse_json
       time_key: time
       time_format: "%Y-%m-%dT%H:%M:%S.%L%Z"
+      severity_key: level
   service:
     pipelines:
       default_pipeline:
