Fixed config to add move_severity processor

--- a/packer/config.yaml
+++ b/packer/config.yaml
@@ -19,4 +19,4 @@ logging:
     pipelines:
       default_pipeline:
         receivers: [webapp-receiver]
-        processors: [webapp-processor]
+        processors: [webapp-processor, move_severity]
