--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -50,6 +50,8 @@ jobs:
       
       - name: Run tests
         run: npm test
+        env:
+          ENV: DEV
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
