--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,8 +1,8 @@
 name: Run integration tests
-on: 
-  pull_request: 
+on:
+  pull_request:
     types: [closed]
-    branches: 
+    branches:
       - main
 
 jobs:
@@ -12,7 +12,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
       - name: Check out repository code
         uses: actions/checkout@v4
 
@@ -22,36 +21,36 @@ jobs:
           tar -czf /tmp/webapp-artifact.tar.gz webapp
 
       - name: Setup node
-        uses: actions/setup-node@v4  
+        uses: actions/setup-node@v4
 
       - name: Install postgres
         run: |
           sudo apt-get update
           sudo apt-get install postgresql postgresql-contrib
           sudo service postgresql start
-          sudo -u postgres psql -c "CREATE DATABASE ${{vars.POSTGRESQL_DB}};"
-          sudo -u postgres psql -c "CREATE USER ${{secrets.POSTGRESQL_USER}} WITH PASSWORD '${{secrets.POSTGRESQL_PASSWORD}}';"
-          sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE ${{vars.POSTGRESQL_DB}} TO ${{secrets.POSTGRESQL_USER}};"
-        
+          sudo -u postgres psql -c "CREATE DATABASE ${{vars.DEV_POSTGRESQL_DB}};"
+          sudo -u postgres psql -c "CREATE USER ${{secrets.DEV_POSTGRESQL_USER}} WITH PASSWORD '${{secrets.DEV_POSTGRESQL_PASSWORD}}';"
+          sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE ${{vars.DEV_POSTGRESQL_DB}} TO ${{secrets.DEV_POSTGRESQL_USER}};"
+
       - name: Install dependencies
         run: npm install
 
       - name: Run server
         run: npm start &
-      
+
       - name: Run tests
         run: npm test
         env:
           ENV: DEV
-          POSTGRESQL_HOST : localhost
+          POSTGRESQL_HOST: localhost
 
-      - id: 'auth'
-        uses: 'google-github-actions/auth@v2'
+      - id: "auth"
+        uses: "google-github-actions/auth@v2"
         with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+          credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
 
-      - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v2'
+      - name: "Set up Cloud SDK"
+        uses: "google-github-actions/setup-gcloud@v2"
 
       - name: Install packer
         uses: hashicorp/setup-packer@main
@@ -94,8 +93,8 @@ jobs:
                     echo POSTGRESQL_HOST=${PRIVATE_IP} >> .env
                     echo PORT=6969 >> .env
                     
-                    sudo mv .env /opt/webapp/.env"     
-                    
+                    sudo mv .env /opt/webapp/.env"
+
         env:
           DB_USER: ${{secrets.POSTGRESQL_USER}}
           DB_PASSWORD: ${{secrets.POSTGRESQL_PASSWORD}}
@@ -107,7 +106,7 @@ jobs:
           gcloud compute instance-groups managed set-instance-template ${{vars.INSTANCE_GROUP_NAME}} \
           --template ${{vars.TEMPLATE_NAME}} \
           --zone us-east1-b
-       
+
       - name: Start rolling update of the instance group
         run: |
           gcloud compute instance-groups managed rolling-action start-update ${{vars.INSTANCE_GROUP_NAME}} \
