--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -1,6 +1,13 @@
 name: Run integration tests
 on: [pull_request]
 
+env:
+  POSTGRESQL_HOST: ${{ vars.DEV_POSTGRESQL_HOST }}
+  POSTGRESQL_USER: ${{ secrets.DEV_POSTGRESQL_USER }}
+  POSTGRESQL_PASSWORD: ${{ secrets.DEV_POSTGRESQL_PASSWORD }}
+  POSTGRESQL_DB: ${{ vars.DEV_POSTGRESQL_DB }}
+  PORT: ${{ vars.PORT }}
+
 jobs:
   # Label of the container job
   run-tests:
