--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -120,4 +120,5 @@ jobs:
       - name: Check the status of the rolling update
         run: |
           gcloud compute instance-groups managed wait-until ${{vars.INSTANCE_GROUP_NAME}} \
-          --version-target-reached
+          --version-target-reached \
+          --zone=us-east1-b
